--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,55 +1,29 @@
-import os
-import json
-import time
-import requests
-from datetime import datetime, timedelta
-from selenium import webdriver
-from selenium.webdriver.chrome.options import Options
-from selenium.webdriver.common.by import By
+name: Bingo Daily Backup
+on:
+  schedule:
+    - cron: '0 16 * * *'
+  workflow_dispatch:
 
-def send_tg(msg):
-    url = f"https://api.telegram.org/bot{os.environ['TG_TOKEN']}/sendMessage"
-    payload = {"chat_id": os.environ['TG_CHAT_ID'], "text": msg, "parse_mode": "HTML"}
-    try: requests.post(url, json=payload)
-    except: pass
-
-def run_crawler():
-    options = Options()
-    options.add_argument('--headless')
-    options.add_argument('--no-sandbox')
-    options.add_argument('--disable-dev-shm-usage')
-    driver = webdriver.Chrome(options=options)
-    
-    all_history = {}
-    for i in range(5):
-        d = datetime.now() - timedelta(days=i)
-        date_str = d.strftime('%Y-%m-%d')
-        date_key = d.strftime('%Y%m%d')
-        
-        print(f"正在抓取 {date_str}...")
-        driver.get(f"https://winwin.tw/Bingo?date={date_str}")
-        time.sleep(6) # 給予足夠載入時間
-        
-        rows = driver.find_elements(By.TAG_NAME, "tr")
-        day_data = []
-        for row in rows:
-            txt = row.text
-            if ":" in txt and len(txt) > 40:
-                parts = txt.split()
-                if len(parts) >= 22:
-                    day_data.append({
-                        "issue": parts[0],
-                        "time": parts[1],
-                        "h": int(parts[1].split(':')[0]),
-                        "nums": parts[2:22]
-                    })
-        all_history[date_key] = day_data
-    
-    with open('bingo_data.json', 'w', encoding='utf-8') as f:
-        json.dump(all_history, f, ensure_ascii=False, indent=4)
-    
-    driver.quit()
-    send_tg(f"✅ <b>雲端備份成功</b>\n📅 日期：{datetime.now().strftime('%Y-%m-%d %H:%M')}\n📂 檔案：bingo_data.json 已更新")
-
-if __name__ == "__main__":
-    run_crawler()
+jobs:
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.9'
+      - name: Install dependencies
+        run: pip install selenium webdriver-manager requests
+      - name: Run Crawler
+        env:
+          TG_TOKEN: ${{ secrets.TG_TOKEN }}
+          TG_CHAT_ID: ${{ secrets.TG_CHAT_ID }}
+        run: python bingo_crawler.py
+      - name: Commit data
+        run: |
+          git config --local user.email "action@github.com"
+          git config --local user.name "GitHub Action"
+          git add bingo_data.json
+          git commit -m "update data" || exit 0
+          git push
