--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,8 +1,11 @@
 name: Bingo Daily Backup
 on:
   schedule:
-    - cron: '0 16 * * *'
-  workflow_dispatch:
+    - cron: '0 16 * * *' # 台灣時間每天 00:00 執行
+  workflow_dispatch:   # 允許手動點擊執行
+
+permissions:
+  contents: write      # 重要：解鎖寫入權限，讓機器人可以存檔
 
 jobs:
   build:
