--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,7 +1,7 @@
 name: Bingo Daily Backup
 on:
   schedule:
-    - cron: '0 16 * * *'
+    - cron: '0 16 * * *' # 台灣時間 00:00 執行
   workflow_dispatch:
 jobs:
   build:
