--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,30 +1,38 @@
 name: Bingo Daily Backup
+
 on:
   schedule:
-    - cron: '0 16 * * *' # 台灣時間 00:00 執行
+    - cron: '0 16 * * *'
   workflow_dispatch:
+
 jobs:
   build:
     runs-on: ubuntu-latest
     permissions:
       contents: write
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout code
+        uses: actions/checkout@v3
+
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
           python-version: '3.9'
+
       - name: Install dependencies
-        run: pip install selenium webdriver-manager requests
+        run: |
+          pip install selenium webdriver-manager requests
+
       - name: Run Crawler
         env:
           TG_TOKEN: ${{ secrets.TG_TOKEN }}
           TG_CHAT_ID: ${{ secrets.TG_CHAT_ID }}
         run: python bingo_crawler.py
+
       - name: Commit data
         run: |
           git config --local user.email "action@github.com"
           git config --local user.name "GitHub Action"
           git add bingo_data.json
-          git commit -m "update data" || exit 0
+          git commit -m "自動更新數據" || exit 0
           git push
